--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-beautifulsoup4==4.11.1
-certifi==2022.12.7
-charset-normalizer==2.1.1
-idna==3.4
-mutagen==1.46.0
-Pillow==9.3.0
-plum-py==0.8.5
+beautifulsoup4==4.12.3
+certifi==2024.8.30
+charset-normalizer==3.3.2
+idna==3.10
+mutagen==1.47.0
+pillow==10.4.0
+plum-py==0.8.7
 PyPDF2==3.0.1
 PySocks==1.7.1
-requests==2.28.1
-soupsieve==2.3.2.post1
-urllib3==1.26.13
+requests==2.32.3
+soupsieve==2.6
+urllib3==2.2.3
